refactor: clean dead code and standardize Java sources